--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/application.css">
 
