--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,6 +13,20 @@
   <title>StudyHabits</title>
 </head>
 
+
+  <header>
+    <a id="brand" href='/'>StudyHabits</a>
+    <nav>
+      <% if user_logged_in? %>
+        <a href='/users/<%= current_user.id %>'><%= current_user.username%></a> //
+        <a href='/logout'>Logout</a>
+      <% else %>
+        <a href='/users/new'>Register</a> //
+        <a href='/login'>Login</a>
+      <% end %>
+    </nav>
+  </header>
+
 <body>
   <%= yield %>
 </body>
