--- a/app/views/theaters/showTrack.erb
+++ b/app/views/theaters/showTrack.erb
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
 <script src="/js/timer.js"></script>
+<script src="/js/timer.js"></script>
   <body>
 
-   <div class='theaterContainer'>
-    <br>
     <div id="player"></div>
-    <div class='content-description'>
-  </div>
   </body>
-
 </html>
