--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -41,7 +41,9 @@
       <input type="checkbox" name="sounds_flowingWater"> <span class='formText'> Flowing Water / River</span><br>
     </section>
 
-    <input type='submit' value='submit'>
+    <section class= "selectGenre">
+      <input type='submit' value='submit'>
+    </section>
 
   </form>
 </div>
