--- a/app/views/theaters/showTrack.erb
+++ b/app/views/theaters/showTrack.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script src="/js/timer.js"></script>
-<script src="/js/timer.js"></script>
+<script src="/js/track.js"></script>
   <body>
 
     <div id="player"></div>
