got a mvp display going

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,15 @@
-<div class="container">
+
   <script src="/js/form.js"></script>
-  <h1>StudyHabits</h1>
+
+    <main>
+      <div id="jumbotron"><img src='/media/headphones.png'></div>
+      <hr class="star-light">
+      <h1>Tune in & tune up</h1>
+      <h3>Audio to help you concentrate.</h3>
+      <div id='mainpage-button'>
+        <button><a href='/users/new'>Sign Up Now</a></button>
+      </div>
+    </main>
 
   <section id="input-form">
     <form id='time-form' action='/theaters/show'>
@@ -8,8 +17,7 @@
       <input type='submit' value='go'>
     </form>
   </section>
-<!--
-  <a href="/theaters/show">go</a> -->
 
 
-</div>
+
+
