--- a/app/views/users/newPreferences.erb
+++ b/app/views/users/newPreferences.erb
@@ -1,6 +1,6 @@
 
-<div class="container">
-  <form action="/users" method='post'>
+<main>
+  <form action="/users/setPreferences" method='post'>
 
     <section class= "selectGenre">
       <h3>Choose for me</h3>
@@ -46,4 +46,4 @@
     </section>
 
   </form>
-</div>
+<main>
