--- a/app/views/theaters/show.erb
+++ b/app/views/theaters/show.erb
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html>
-<script src="/js/timer.js"></script>
-  <body>
 
+<script src="/js/timer.js"></script>
+
+<main>
    <div class='theaterContainer'>
     <br>
     <div id="player"></div>
     <div class='content-description'>
   </div>
-  </body>
-
-</html>
+</main>
