--- a/public/css/application.css
+++ b/public/css/application.css
@@ -6,6 +6,8 @@ h6, h5, h4, h3, h2, h1, p, a, input  {
 
 a {
   text-decoration: none;
+  color: #00FF48;
+  font-size: 1.25em;
 }
 
 
@@ -13,49 +15,122 @@ a {
 ******************************************/
 
 header {
-  width: 80%;
-  margin: auto;
+  width: 100%;
+  background-color: #2CA3E7;
   height: 3em;
-  background-color: #8E4585;
+  padding: .2% 0 0 5%;
   box-sizing: border-box;
 }
-#brand {
-  width: 50%;
+#logo {
   float: left;
-  font-size: 1.3em;
-  padding-top: .5em;
-  padding-left: 1em;
-  color: aqua;
+  width: 50%;
 }
 
-header a:visited {
-  color: #000000;
+#logo h1 {
+  color: white;
+  line-height: 0;
 }
 
 nav {
-  padding-top: 1%;
   float: right;
-  font-size: 1em;
-  color: white;
-  padding-right: 1em;
-  padding-top: .75em;
+  width: 20%;
+  padding-top: .2%;
 }
 
 nav a {
-  color: aqua;
+  display: inline-block;
+  text-decoration: none;
+  color: white;
+  padding: 1%;
+  border-radius: 15px;
 }
-/*
+
+nav a:active, nav a:hover {
+  background-color: #178ACC;
+}
+
+
+/* MAIN
+*******************************************/
+
+main {
+  width: 100%;
+  background-color: #046EAC;
+  min-height: 200px;
+  /*text-align: center;*/
+  color: white;
+  padding-bottom: 10%;
+  display: table;
+}
+
+main h1 {
+  text-align: center;
+  font-size: 3em;
+  line-height: 0;
+  padding-bottom: 1%;
+}
+
+main h3, #mainpage-button {
+  text-align: center;
+}
+
+main button {
+  background-color: white;
+  color: #046EAC;
+  font-size: 2em;
+  padding: 1%;
+}
+
+#jumbotron {
+  line-height: 0;
+  padding: 2%;
+  text-align: center;
+}
+
+.centerMe {
+  text-align: center;
+}
+
+/*  FORM
 *******************************************/
 
 .formText {
   font-family: 'Open Sans', sans-serif;
 }
-.container {
+/*.container {
   margin: 20px auto;
   width: 80%;
   padding: 0px 20px 20px 20px;
-/*  border: 1px dotted black;*/
   display: table;
+}
+*/
+
+.form-wrapper, .errors-wrapper {
+  text-align: center;
+  padding-top: 2%;
+}
+
+.errors-wrapper {
+  background-color: #CC0000;
+  color: white;
+  padding: 1em;
+}
+
+input[type=text], input[type=password] {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+input[type=submit], button {
+  margin: 8px 0;
+  padding: 12px 20px;
+  background-color: #178ACC;
+}
+
+button a {
+  color: black;
 }
 
 .theaterContainer {
@@ -63,7 +138,7 @@ nav a {
   margin: 20px auto;
   width: 600px;
   padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
+
   text-align: center;
 }
 
@@ -78,20 +153,73 @@ nav a {
 }
 
 
-/* FORM BUTTON
-*********************/
+/* User Show page
+********************************/
+#preference {
+  float: left;
+  width: 30%;
+  margin-left: 15%;
+  /*border: 1px solid black;*/
+  text-align: right;
+}
 
-/*input[type=checkbox] {
-  visibility: hidden;
-}*/
+#startStudying {
+  float: right;
+  width: 30%;
+  /*border: 1px solid black;*/
+  margin-right: 15%;
+}
+/* ------ HR divider -------- */
 
-/*.checkboxFour {
-  width: 40px;
-  height: 40px;
-  background: #ddd;
-  margin: 20px 90px;
+hr.star-light,
+hr.star-primary,
+hr.star-plain {
+    margin: 25px auto 30px;
+    padding: 0;
+    max-width: 250px;
+    border: 0;
+    border-top: solid 5px;
+    text-align: center;
+}
 
-  border-radius: 100%;
-  position: relative;
-  box-shadow: 0px 1px 3px rgba(0,0,0,0.5);
-}*/
+hr.star-light:after,
+hr.star-primary:after {
+    content: "|";  /* prev icon f013 */
+    display: inline-block;
+    position: relative;
+    top: -.8em;
+    padding: 0 .25em;
+    font-family: FontAwesome;
+    font-size: 2em;
+}
+
+hr.star-light,
+hr.star-plain {
+    border-color: #fff;
+}
+
+hr.star-light:after,
+hr.star-plain:after {
+    color: #fff;
+    background-color: #046EAC;
+}
+
+hr.star-primary {
+    border-color: #317EB4;
+}
+
+hr.star-primary:after {
+    color: #317EB4;
+    background-color: #fff;
+}
+
+
+
+hr.star-light:plain {
+    display: inline-block;
+    position: relative;
+    top: -.8em;
+    padding: 0 .25em;
+    font-family: FontAwesome;
+    font-size: 2em;
+}
