--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,12 +11,12 @@
       </div>
     </main>
 
-  <section id="input-form">
+<!--   <section id="input-form">
     <form id='time-form' action='/theaters/show'>
       <input type='text' name='inteval' placeholder='how long? (minutes)'>
       <input type='submit' value='go'>
     </form>
-  </section>
+  </section> -->
 
 
 
