--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -15,6 +15,7 @@
       <% current_user.preferred_tags.each do |tag| %>
         <p> <%= tag.description %> <p>
       <% end %>
+      <h2>- edit</h2>
   </section>
   <section id="startStudying">
       <h2> Get ur focus on. </h2>
