--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/application.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-  <script src="/js/application.js"></script>
+
 
   <title>StudyHabits</title>
 </head>
@@ -18,6 +18,7 @@
       <nav>
         <% if user_logged_in? %>
           <a href='/users/<%= current_user.id %>'><%= current_user.username%></a> //
+          <a href='/theater/diversion'>Diversion!</a> //
           <a href='/logout'>Logout</a>
         <% else %>
           <a href='/users/new'>Register</a> //
