--- a/app/views/theaters/diversions.erb
+++ b/app/views/theaters/diversions.erb
@@ -1,6 +1,6 @@
 
-<script src="/js/timer.js"></script>
-<script src="/js/application.js"></script>
+<script src="/js/timer2.js"></script>
+<script src="/js/application2.js"></script>
 
 <main>
    <div class='theaterContainer'>
